--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Login_ui">
+        <activity android:name="second_activity">
+
+
+        </activity>
         <activity
             android:name=".MainActivity"
             android:exported="true">
